Project

General

Profile

Actions

Bug #37493

closed

Incorrect upmap remove

Added by tao ning over 5 years ago. Updated over 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
OSDMap
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
mimic, luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

After I adjusted the mapping of PG with upmap mode, I restarted all OSD, and found that the mapping of PG became unbalanced again.
Should pg be removed from pg_upmap_items in this case?

Adjusted PG distribution:
ID CLASS WEIGHT REWEIGHT SIZE USE AVAIL %USE VAR PGS
0 ssd 1.00000 1.00000 10240M 1025M 9214M 10.02 1.00 65
1 ssd 1.00000 1.00000 10240M 1025M 9214M 10.02 1.00 65
2 ssd 1.00000 1.00000 10240M 1025M 9214M 10.02 1.00 60
3 ssd 1.00000 1.00000 10240M 1025M 9214M 10.02 1.00 65
4 ssd 1.00000 1.00000 10240M 1025M 9214M 10.02 1.00 64
5 ssd 1.00000 1.00000 10240M 1025M 9214M 10.02 1.00 65
6 ssd 1.00000 1.00000 10240M 1025M 9214M 10.02 1.00 65
7 ssd 1.00000 1.00000 10240M 1025M 9214M 10.02 1.00 65
8 ssd 1.00000 1.00000 10240M 1025M 9214M 10.02 1.00 65
9 ssd 1.00000 1.00000 10240M 1025M 9214M 10.02 1.00 63
10 ssd 1.00000 1.00000 10240M 1025M 9214M 10.02 1.00 63
11 ssd 1.00000 1.00000 10240M 1025M 9214M 10.02 1.00 63
TOTAL 120G 12309M 107G 10.02
MIN/MAX VAR: 1.00/1.00 STDDEV: 0

PG distribution after OSD restart:
ID CLASS WEIGHT REWEIGHT SIZE USE AVAIL %USE VAR PGS
0 ssd 1.00000 1.00000 10240M 1027M 9212M 10.03 1.00 65
1 ssd 1.00000 1.00000 10240M 1027M 9212M 10.03 1.00 68
2 ssd 1.00000 1.00000 10240M 1027M 9212M 10.03 1.00 53
3 ssd 1.00000 1.00000 10240M 1027M 9212M 10.03 1.00 67
4 ssd 1.00000 1.00000 10240M 1027M 9212M 10.03 1.00 63
5 ssd 1.00000 1.00000 10240M 1027M 9212M 10.03 1.00 70
6 ssd 1.00000 1.00000 10240M 1027M 9212M 10.03 1.00 64
7 ssd 1.00000 1.00000 10240M 1027M 9212M 10.03 1.00 66
8 ssd 1.00000 1.00000 10240M 1027M 9212M 10.03 1.00 71
9 ssd 1.00000 1.00000 10240M 1027M 9212M 10.03 1.00 60
10 ssd 1.00000 1.00000 10240M 1027M 9212M 10.03 1.00 60
11 ssd 1.00000 1.00000 10240M 1027M 9212M 10.03 1.00 61
TOTAL 120G 12324M 107G 10.03
MIN/MAX VAR: 1.00/1.00 STDDEV: 0


Files

mon.a.log (36.9 KB) mon.a.log tao ning, 12/01/2018 09:13 AM

Related issues 2 (0 open2 closed)

Copied to Ceph - Backport #37537: luminous: Incorrect upmap removeResolvedxie xingguoActions
Copied to Ceph - Backport #37538: mimic: Incorrect upmap removeResolvedxie xingguoActions
Actions #1

Updated by tao ning over 5 years ago

Steps: adjust PG distribution with balancer upmap mode first, then restart osd.0.

Actions #2

Updated by Kefu Chai over 5 years ago

  • Status changed from New to Resolved
Actions #3

Updated by Kefu Chai over 5 years ago

  • Status changed from Resolved to Pending Backport
  • Backport set to mimic, luminous
Actions #4

Updated by Nathan Cutler over 5 years ago

Actions #5

Updated by Nathan Cutler over 5 years ago

Actions #6

Updated by Nathan Cutler over 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF