osd/OSDMap: Incorrect upmap remove

There is no need to check OSD state in the function pg_to_raw_up, and checks are made in the maybe_remove_pg_upmaps process,
which might result in unreasonable deletion of the pg_upmap_items member, see https://tracker.ceph.com/issues/37493

Signed-off-by: ningtao <ningtao@sangfor.com.cn>